--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CV Resky Bayu Andhika</title>
   </head>
+  <link rel="stylesheet" href="style.css" />
   <body>
-    <h1>Belajar NodeJS</h1>
+    <table cellspacing="10" class="tabel1">
+      <tr>
+        <td>
+          <img src="20191103_162843.jpg" alt="" />
+        </td>
+        <td>
+          <h2>Resky Bayu Andhika</h2>
+          <p>I am a One Piece Lover</p>
+          <p>Instagram : <a href="https://www.instagram.com/byuandhka/">@byuandhka</a></p>
+        </td>
+      </tr>
+    </table>
+
+    <br />
+    <hr />
+
+    <table>
+      <tr>
+        <td>
+          <div class="boxBiodata">
+            <div class="biodata">
+              <h3 style="text-align: center">Biodata</h3>
+              <ul>
+                <li>tempat dan tanggal lahir : Sulawesi Selatan tahun 90an</li>
+                <li>Sekolah : Fisika UNY</li>
+                <li>Hobi : Makan nasi goreng</li>
+                <li>Anime kesukaan : One Piece, AOT boljug</li>
+              </ul>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="sekolah">
+            <h3 style="text-align: center">Pengalaman Sekolah</h3>
+            <ol>
+              <li>SMA 2 Mataram</li>
+              <li>UNY</li>
+            </ol>
+          </div>
+        </td>
+        <td>
+          <div class="mottoHidup">
+            <h3 style="text-align: center">Motto Hidup</h3>
+            <ul>
+              <li><strong>Lebih baik kamu belajar berjalan dulu nak, baru kamu bisa berlari</strong> -Mrs PUFF-</li>
+              <li><strong>Semua makhluk hebat dalam satu hal, tapi tidak dalam segala hal</strong> -Spongebob Squarepants-</li>
+            </ul>
+          </div>
+        </td>
+      </tr>
+    </table>
+
+    <br />
+    <hr />
+
+    <div class="skill">
+      <img class="videoCall" src="video-calling.png" alt="" />
+      <table style="margin-top: 5px">
+        <tr>
+          <th><h2>Skills</h2></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li>memasak</li>
+              <li>menabung</li>
+              <li>naik motor juga bisa</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
